# DocLens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-all.yml
assets/: languages.json
src/: main.py
src/components/: action_button.py  ad_banner.py  camera_viewfinder.py  media_preview.py  status_overlay.py
src/core/: constants.py  state.py  styles.py  theme.py  tokens.py  utils.py
src/services/: ad_service.py  ai_service.py  camera.py  credit_service.py  file_picker.py  share.py  storage_service.py
src/views/: result.py  scan.py  settings.py  splash.py  summary.py  translate.py
