[project]
name = "doclens"
version = "1.0.0"
description = "AI Document Scanner — Smart Summary & Instant Translate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet==0.85.1",
    "flet-ads==0.85.1",
    "flet-camera==0.85.1",
    "httpx>=0.28.1",
    "pillow>=10.4.0",
    "fpdf2>=2.8.0",
]

[tool.flet]
org = "ng.kiri"
product = "DocLens"
build_number = 1

[tool.flet.app]
path = "src"
exclude = ["__pycache__", ".git", "*.db", "tests", "*.md"]

[tool.flet.compile]
app = true
packages = true

[tool.flet.cleanup]
app = true
packages = true
package_files = ["**/*.pyi", "**/*.c", "**/*.h", "**/*.pxd", "**/test*", "**/tests/"]

[tool.flet.android]
bundle_id = "ng.kiri.doclens"
split_per_abi = true

[tool.flet.android.app.boot_screen]
show = true
message = "DocLens"

[tool.flet.android.app.startup_screen]
show = true
message = "Getting ready…"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "true"
allowBackup = "false"
fullBackupContent = "false"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-5679949845754640~8438792639"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.CAMERA" = true
"android.permission.READ_MEDIA_IMAGES" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true

[tool.flet.android.feature]
"android.software.leanback" = false
"android.hardware.touchscreen" = true

[tool.flet.ios.info]
NSCameraUsageDescription = "DocLens uses the camera to scan documents"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]
